--- a/rangers/20260125.html
+++ b/rangers/20260125.html
@@ -16,55 +16,55 @@
         });
         function getNames() {
             return [
-                ["光殿Chuiyuan", "1", "L99", "1", "?", "7", "大III", "4", "- - -", "0"],
+                ["光殿Chuiyuan", "1", "L99", "1", "?", "7", "大III", "4", "-", "0"],
                 ["台灣大香腸", "2", "L91", "2", "強2", "2", "大III", "4", "↓", "-1"],
-                ["光殿俊*", "3", "L90", "3", "中3", "5", "鑽I", "5", "- - -", "0"],
+                ["光殿俊*", "3", "L90", "3", "中3", "5", "鑽I", "5", "-", "0"],
                 ["光殿昱*", "4", "L90", "4", "強2", "2", "大II", "3", "↓", "-1"],
-                ["光殿我愛食鐵獸", "5", "L90", "5", "中1", "3", "鑽I", "5", "- - -", "0"],
+                ["光殿我愛食鐵獸", "5", "L90", "5", "中1", "3", "鑽I", "5", "-", "0"],
                 ["Aiji", "6", "L89", "6", "奉獻組", "6", "金I", "8", "↑", "1"],
                 ["攝狼爬扒照", "7", "L87", "7", "?", "7", "鑽I", "5", "↓", "-1"],
-                ["光殿阿文", "8", "L82", "8", "強1", "1", "大II", "3", "- - -", "0"],
+                ["光殿阿文", "8", "L82", "8", "強1", "1", "大II", "3", "-", "0"],
                 ["光殿小號", "9", "L81", "9", "?", "7", "鑽II", "6", "↓", "-1"],
                 ["欽阿", "10", "L81", "10", "中2", "4", "鑽III", "7", "↓", "-1"],
-                ["光殿寶寶", "11", "L79", "11", "中2", "4", "鑽III", "7", "- - -", "0"],
-                ["金豪野", "12", "L78", "12", "中2", "4", "鑽I", "5", "- - -", "0"],
-                ["晟心集團執行長", "13", "L77", "13", "中1", "3", "鑽I", "5", "- - -", "0"],
-                ["光殿努力往上爬", "14", "L67", "14", "中1", "3", "大I", "2", "- - -", "0"],
-                ["獨孤小莊", "15", "L63", "15", "中3", "5", "鑽I", "5", "- - -", "0"],
+                ["光殿寶寶", "11", "L79", "11", "中2", "4", "鑽III", "7", "-", "0"],
+                ["金豪野", "12", "L78", "12", "中2", "4", "鑽I", "5", "-", "0"],
+                ["晟心集團執行長", "13", "L77", "13", "中1", "3", "鑽I", "5", "-", "0"],
+                ["光殿努力往上爬", "14", "L67", "14", "中1", "3", "大I", "2", "-", "0"],
+                ["獨孤小莊", "15", "L63", "15", "中3", "5", "鑽I", "5", "-", "0"],
                 ["光殿意哲", "16", "L57", "16", "中2", "4", "金I", "8", "↑", "1"],
                 ["光殿の大棒棒", "17", "L53", "17", "強1", "1", "大III", "4", "↑", "1"],
                 ["吖醬", "18", "L51", "18", "中1", "3", "大I", "2", "↑", "1"],
                 ["光殿彼岸花", "19", "L48", "19", "強2", "2", "鑽III", "7", "↓", "-1"],
-                ["PKTG2", "20", "L46", "20", "中2", "4", "鑽I", "5", "- - -", "0"],
+                ["PKTG2", "20", "L46", "20", "中2", "4", "鑽I", "5", "-", "0"],
                 ["我先大個便", "21", "L44", "21", "中1", "3", "鑽I", "5", "↓", "-1"],
-                ["jane", "22", "L42", "22", "中3", "5", "鑽I", "5", "- - -", "0"],
-                ["一隻八寶", "23", "L42", "23", "強1", "1", "白II", "12", "- - -", "0"],
-                ["光殿妹妹6035cd", "24", "L41", "24", "?", "7", "鑽II", "6", "- - -", "0"],
+                ["jane", "22", "L42", "22", "中3", "5", "鑽I", "5", "-", "0"],
+                ["一隻八寶", "23", "L42", "23", "強1", "1", "白II", "12", "-", "0"],
+                ["光殿妹妹6035cd", "24", "L41", "24", "?", "7", "鑽II", "6", "-", "0"],
                 ["胖虎", "25", "L39", "25", "中1", "3", "大I", "2", "↑", "1"],
-                ["光殿の指揮文", "26", "L33", "26", "奉獻組", "6", "鑽II", "6", "- - -", "0"],
-                ["光殿autumn", "27", "L26", "27", "奉獻組", "6", "鑽III", "7", "- - -", "0"],
+                ["光殿の指揮文", "26", "L33", "26", "奉獻組", "6", "鑽II", "6", "-", "0"],
+                ["光殿autumn", "27", "L26", "27", "奉獻組", "6", "鑽III", "7", "-", "0"],
                 ["光殿非洲人", "28", "L25", "28", "?", "7", "鑽I", "5", "↑", "1"],
-                ["光殿萌新", "29", "L24", "29", "強1", "1", "鑽I", "5", "- - -", "0"],
+                ["光殿萌新", "29", "L24", "29", "強1", "1", "鑽I", "5", "-", "0"],
                 ["光殿望川酷子", "30", "L18", "30", "奉獻組", "6", "鑽III", "7", "↓", "-1"],
-                ["光殿小瓜呆", "31", "L09", "31", "?", "7", "鑽I", "5", "- - -", "0"],
+                ["光殿小瓜呆", "31", "L09", "31", "?", "7", "鑽I", "5", "-", "0"],
                 ["光殿承*", "32", "L02", "32", "?", "7", "鑽I", "5", "↑", "1"],
-                ["光殿02", "33", "U98", "33", "?", "7", "鑽I", "5", "- - -", "0"],
-                ["huangtru", "34", "U98", "34", "?", "7", "鑽I", "5", "- - -", "0"],
-                ["瘋狂北極熊", "35", "U96", "35", "?", "7", "鑽I", "5", "- - -", "0"],
+                ["光殿02", "33", "U98", "33", "?", "7", "鑽I", "5", "-", "0"],
+                ["huangtru", "34", "U98", "34", "?", "7", "鑽I", "5", "-", "0"],
+                ["瘋狂北極熊", "35", "U96", "35", "?", "7", "鑽I", "5", "-", "0"],
                 ["喵喵", "36", "U94", "36", "?", "7", "金II", "9", "↑", "1"],
                 ["歐咖咪", "37", "U93", "37", "?", "7", "大I", "2", "↑", "1"],
                 ["光殿翰翰", "38", "U91", "38", "中3", "5", "大I", "2", "↑", "1"],
                 ["光殿阿晟", "39", "U91", "39", "?", "7", "大III", "4", "↑", "1"],
-                ["Yu", "40", "U91", "40", "?", "7", "大II", "3", "- - -", "0"],
+                ["Yu", "40", "U91", "40", "?", "7", "大II", "3", "-", "0"],
                 ["光殿大間諜", "41", "U82", "41", "?", "7", "大II", "3", "↓", "-1"],
-                ["光の殿俊*", "42", "U82", "42", "奉獻組", "6", "鑽III", "7", "- - -", "0"],
+                ["光の殿俊*", "42", "U82", "42", "奉獻組", "6", "鑽III", "7", "-", "0"],
                 ["光殿誰在乎", "43", "U80", "43", "?", "7", "鑽I", "5", "↓", "-1"],
-                ["光殿Ruitai", "44", "U72", "44", "?", "7", "大III", "4", "- - -", "0"],
+                ["光殿Ruitai", "44", "U72", "44", "?", "7", "大III", "4", "-", "0"],
                 ["重生之我有點帥", "45", "U69", "45", "?", "7", "鑽III", "7", "↓", "-1"],
-                ["光殿WPC", "46", "U62", "46", "中2", "4", "鑽II", "6", "- - -", "0"],
+                ["光殿WPC", "46", "U62", "46", "中2", "4", "鑽II", "6", "-", "0"],
                 ["光殿菜雞", "47", "U62", "47", "?", "7", "金II", "9", "↑", "1"],
                 ["yayui", "48", "U57", "48", "?", "7", "鑽II", "6", "↓", "-1"],
-                ["光殿無序", "49", "U54", "49", "?", "7", "鑽I", "5", "- - -", "0"],
+                ["光殿無序", "49", "U54", "49", "?", "7", "鑽I", "5", "-", "0"],
                 ["要來我家看鱷魚嗎", "50", "U35", "50", "?", "7", "金III", "10", "↓", "-1"]
             ];
         }
